--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@
                 <h2>ФОТОГАЛЕРЕЯ</h2>
                 <div class="gallery">
                     <div class="gallery-item vertical">
-                        <img src="images/photo1.JPG" alt="Фото 1" loading="lazy">
+                        <img src="./images/photo1.jpg" alt="Фото 1" loading="lazy" onerror="console.error('Ошибка загрузки фото 1')">
                     </div>
                     <div class="gallery-item vertical">
                         <img src="images/photo2.jpg" alt="Фото 2" loading="lazy">
@@ -748,7 +748,7 @@
                         <img src="images/photo6.jpg" alt="Фото 6" loading="lazy">
                     </div>
                     <div class="gallery-item horizontal-large">
-                        <img src="images/photo7.JPG" alt="Фото 7" loading="lazy">
+                        <img src="./images/photo7.jpg" alt="Фото 7" loading="lazy" onerror="console.error('Ошибка загрузки фото 7')">
                     </div>
                 </div>
             </div>
