--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="Демид Полухин - режиссер, сценарист и актер. Официальный сайт с портфолио работ, фильмами и фотогалереей.">
-    <meta name="keywords" content="Демид Полухин, режиссер, сценарист, актер, фильмы, Wake Up">
+    <meta name="keywords" content="Демид Полухин, режиссер, сценарист, актер, фильмы, ">
     <meta name="author" content="Демид Полухин">
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="DEMID POLUKHIN - Официальный сайт">
@@ -696,9 +696,6 @@
             <div class="container">
                 <h2>ФИЛЬМЫ</h2>
                 <div class="gallery">
-                    <div class="gallery-item" data-title="Wake Up (2024) - Короткометражный фильм" style="--index: 1;">
-                        <img src="images/wake_up_film.jpg" alt="Wake Up - Короткометражный фильм" class="smooth-image" onload="this.classList.add('loaded')" loading="lazy">
-                    </div>
                     <div class="gallery-item placeholder development" data-title="В разработке (2025)" style="--index: 2;">
                         <div class="icon">🎬</div>
                         <div class="text">В разработке</div>
@@ -880,7 +877,6 @@
         "workExample": [
             {
                 "@type": "Movie",
-                "name": "Wake Up",
                 "datePublished": "2024"
             }
         ]
